# Misc-Scripts

./: .flake8  .gitignore  .markdownlint.json  README.md  hoff-it.readme  hoff-it.sh  pyproject.toml
applescripts/: mic-mute.scpt
file_munging/: __init__.py  cli.py  config.py  log.py  meal_plan.py  tiller.py
hoff-it/: readme.md
ubiquiti/: update_dnsmaq_conf.py
